--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -59,7 +59,7 @@
                                     <ul>
                                         @foreach (Fakulte fakulte in Model.Fakulteler)
                                         {
-                                            <li><a href="#">@fakulte.FakulteAd</a></li>
+                                            <li><a asp-controller="Fakulte" asp-action="Index" asp-route-id="@fakulte.Id">@fakulte.FakulteAd</a></li>
                                         }
                                     </ul>
                                 </div>
@@ -103,21 +103,22 @@
                         </ul>
                     </div>
                 </li>
-                <li><a href="#">Haberler</a></li>
-                <li><a href="#">Duyurular</a></li>
-                <li><a href="#">Etkinlikler</a></li>
+                <li><a asp-controller="Haber" asp-action="Index">Haberler</a></li>
+                <li><a asp-controller="Duyuru" asp-action="Index">Duyurular</a></li>
+                <li><a asp-controller="Etkinlik" asp-action="Index">Etkinlikler</a></li>
             </ul>
         </div>
     </div>
 
     @RenderBody()
 
-    <footer>
+    
+    @*<footer>
         <div class="contact">
             <span id="adres">Düzce Üniversitesi Konuralp Yerleşkesi Yörük Mah. Merkez/DÜZCE, 81620</span>
             <span id="tel">TEL : 0850 800 81 81 / FAKS: 0380 542 11 03</span>
         </div>
-    </footer>
+    </footer>*@
 </body>
 <script type="text/javascript">
     window.addEventListener("scroll", function () {
