--- a/Views/Panel/Haberler.cshtml
+++ b/Views/Panel/Haberler.cshtml
@@ -4,23 +4,41 @@
 }
 <div class="haberler">
     <a style="display:inline-block;"><h5>HABERLER</h5></a>
-    <a asp-controller="Panel" asp-action="EditHaberler" style="display:inline-block;float:right;"><h5>Haber Ekle</h5></a>
-    <ul>
-        @foreach (var haber in Model)
-        {
-            <li>
-                <a>
-                    @haber.HaberBaslik
-                </a>
-                -
-                <a asp-controller="Panel" asp-action="EditHaberler" asp-route-id="@haber.Id">
-                    (Düzenle)
-                </a>
-                -
-                <a asp-controller="Panel" asp-action="RemoveHaber" asp-route-id="@haber.Id">
-                    (Kaldır)
-                </a>
-            </li>
-        }
-    </ul>
+    <br />
+    <a asp-controller="Panel" class="btn btn-primary" asp-action="EditHaberler">Haber Ekle</a>
+
+
+
+    <table class="table table-striped">
+        <thead>
+            <tr>
+                <th scope="col">ID</th>
+                <th scope="col">Başlık</th>
+                <th scope="col">Açıklama</th>
+                <th scope="col">Kategori</th>
+                <th scope="col">Tarih</th>
+                <th scope="col">#</th>
+                <th scope="col">#</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var haber in Model)
+            {
+                <tr>
+                    <th scope="row">@haber.Id</th>
+                    <td>@haber.HaberBaslik</td>
+                    <td>@haber.HaberAciklama</td>
+                    <td>@haber.HaberKategori</td>
+                    <td>@haber.HaberTarih</td>
+                    <td>
+                        <a class="btn btn-primary" asp-controller="Panel" asp-action="EditHaberler" asp-route-id="@haber.Id"> (Düzenle) </a>
+                    </td>
+                    <td>
+                        <a class="btn btn-primary" asp-controller="Panel" asp-action="RemoveHaber" asp-route-id="@haber.Id" > (Kaldır) </a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+
 </div>
