Duyuru-Etkinlik eklendi, Haber güncellendi

--- a/Views/Duyuru/Duyuru.cshtml
+++ b/Views/Duyuru/Duyuru.cshtml
@@ -7,10 +7,8 @@
                 <div id="fakulteImg"></div>
             </div>
             <div class="col-md-8">
-                <h4 style="margin-bottom:0px;display:inline-block;">@Model.Haber.HaberBaslik</h4>
-                <small class="text-muted" style="float:right"><b>@Model.Haber.HaberKategori | @Model.Haber.HaberTarih</b></small>
-                <hr/>
-                <p>@Model.Haber.HaberAciklama</p>
+                <h4>@Model.Duyuru.DuyuruBaslik</h4>
+                <p>@Model.Duyuru.DuyuruAciklama</p>
             </div>
         </div>
     </div>
