--- a/Views/Etkinlik/Etkinlik.cshtml
+++ b/Views/Etkinlik/Etkinlik.cshtml
@@ -7,10 +7,10 @@
                 <div id="fakulteImg"></div>
             </div>
             <div class="col-md-8">
-                <h4 style="margin-bottom:0px;display:inline-block;">@Model.Haber.HaberBaslik</h4>
-                <small class="text-muted" style="float:right"><b>@Model.Haber.HaberKategori | @Model.Haber.HaberTarih</b></small>
-                <hr/>
-                <p>@Model.Haber.HaberAciklama</p>
+                <h4 style="margin-bottom:0px;display:inline-block;">@Model.Etkinlik.EtkinlikBaslik</h4>
+                <small class="text-muted" style="float:right"><b>@Model.Etkinlik.EtkinlikTarih</b></small>
+                <hr />
+                <p>@Model.Etkinlik.EtkinlikAciklama</p>
             </div>
         </div>
     </div>
