--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -47,9 +47,9 @@
         <img id="logo" src="~/imgs/logo.png">
         <div class="main-nav" id="main-nav">
             <ul class="nav__links">
-                <li><a href="#">Üniversitemiz</a></li>
+                <li><a  asp-controller="Home" asp-action="Index">Üniversitemiz</a></li>
                 <li>
-                    <a href="#">Akademik <i class="fas fa-caret-down"></i></a>
+                    <a>Akademik <i class="fas fa-caret-down"></i></a>
                     <div class="dropdown__menu">
                         <ul>
                             <li>
