--- a/Views/Etkinlik/Index.cshtml
+++ b/Views/Etkinlik/Index.cshtml
@@ -2,22 +2,22 @@
 
 <section id="first-section">
     <div class="container-fluid haber-content">
-        <h3 class="pt-3 px-3">HABERLER</h3>
-        <hr/>
+        <h3 class="pt-3 px-3">ETKİNLİKLER</h3>
+        <hr />
         <div class="row">
-            @foreach (Haber haber in Model.Haberler)
+            @foreach (Etkinlik etkinlik in Model.Etkinlikler)
             {
                 <div class="col-md-3 mb-4">
-                    <a id="haber" asp-controller="Haber" asp-action="Haber" asp-route-id="@haber.Id">
+                    <a id="haber" asp-controller="Etkinlik" asp-action="Etkinlik" asp-route-id="@etkinlik.Id">
                         <div class="card">
                             <div class="top-line"></div>
                             <img src="~/imgs/square.png" class="h-50" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">@haber.HaberBaslik</h5>
-                                <p class="card-text">@haber.HaberAciklama</p>
+                                <h5 class="card-title">@etkinlik.EtkinlikBaslik</h5>
+                                <p class="card-text">@etkinlik.EtkinlikAciklama</p>
                             </div>
                             <div class="card-footer">
-                                <small class="text-muted">@haber.HaberTarih</small>
+                                <small class="text-muted">@etkinlik.EtkinlikTarih</small>
                             </div>
                         </div>
                     </a>
