Css/Layout değiştirildi

--- a/Views/Duyuru/Duyuru.cshtml
+++ b/Views/Duyuru/Duyuru.cshtml
@@ -1,5 +1,7 @@
 ﻿@model DataViewModel
-
+@{
+    Layout = "_SideLayout";
+}
 <section id="first-section">
     <div class="container-fluid side-content">
         <div class="row">
