--- a/Views/Panel/Bolumler.cshtml
+++ b/Views/Panel/Bolumler.cshtml
@@ -3,24 +3,39 @@
     Layout = "_PanelLayout";
 }
 <div class="bolumler">
-    <a style="display:inline-block;"><h5>BÖLÜMLER</h5></a>
-    <a asp-controller="Panel" asp-action="EditBolumler" style="display:inline-block;float:right;"><h5>Bölüm Ekle</h5></a>
-    <ul>
-        @foreach (var bolum in Model)
-        {
-            <li>
-                <a>
-                    @bolum.BolumAdi
-                </a>
-                -
-                <a asp-controller="Panel" asp-action="EditBolumler" asp-route-id="@bolum.Id">
-                    (Düzenle)
-                </a>
-                -
-                <a asp-controller="Panel" asp-action="RemoveBolum" asp-route-id="@bolum.Id">
-                    (Kaldır)
-                </a>
-            </li>
-        }
-    </ul>
+    <center><h5>BÖLÜMLER</h5></center>
+    <br />
+    <a asp-controller="Panel" class="btn btn-outline-success" style="float:right" asp-action="EditBolumler">Bölüm Ekle</a>
+    <br />
+    <br />
+
+    <table class="table table-striped">
+        <thead>
+            <tr>
+                <th scope="col">ID</th>
+                <th scope="col">Adı</th>
+                <th scope="col">Tipi</th>
+                <th scope="col">Fakülte</th>
+                <th scope="col">#</th>
+                <th scope="col">#</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var bolum in Model)
+            {
+                <tr>
+                    <th scope="row">@bolum.Id</th>
+                    <td>@bolum.BolumAdi</td>
+                    <td>@bolum.BolumTipi</td>
+                    <td>@bolum.Fakultesi</td>
+                    <td>
+                        <a class="btn btn-outline-info" asp-controller="Panel" asp-action="EditBolumler" asp-route-id="@bolum.Id">Düzenle</a>
+                    </td>
+                    <td>
+                        <a class="btn btn-outline-danger" asp-controller="Panel" asp-action="RemoveBolum" asp-route-id="@bolum.Id">Kaldır</a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
 </div>
