--- a/Views/Panel/Edit.cshtml
+++ b/Views/Panel/Edit.cshtml
@@ -2,22 +2,45 @@
 @{
     Layout = "_PanelLayout";
 }
-<div>
+<div class="card card-primary">
+    <div class="card-header">
+        <h3 class="card-title">Duyuru Ekle-Düzenle</h3>
+    </div>
     <form asp-controller="Panel" asp-action="Edit" method="post">
-        @*Güncellemede kullanmak için Id bilgisini gizli olarak tutuyoruz *@
         <input asp-for="Id" type="hidden" />
-        <div>
-            <label>Duyuru Başlık: </label>
-            <input asp-for="DuyuruBaslik" />
+        <div class="card-body">
+            <div class="form-group">
+                <label for="exampleInputEmail1">Duyuru Başlığı</label>
+                <input asp-for="DuyuruBaslik" class="form-control" id="exampleInputEmail1" placeholder="Başlık">
+            </div>
+            <div class="form-group">
+                <label for="exampleInputPassword1">Duyuru Açıklaması</label>
+                <textarea asp-for="DuyuruAciklama" class="form-control" rows="3" placeholder="Açıklama.." style="margin-top: 0px; margin-bottom: 0px; height: 75px;"></textarea>
+            </div>
+
+            <div class="form-group">
+                <label for="exampleInputFile">File input</label>
+                <div class="input-group">
+                    <div class="custom-file">
+                        <input type="file" class="custom-file-input" id="exampleInputFile">
+                        <label class="custom-file-label" for="exampleInputFile">Choose file</label>
+                    </div>
+                    <div class="input-group-append">
+                        <span class="input-group-text">Upload</span>
+                    </div>
+                </div>
+            </div>
+
         </div>
-        <div>
-            <label>Duyuru Açıklama </label>
-            <br />
-            <textarea asp-for="DuyuruAciklama"></textarea>
+        <div class="card-footer">
+            <button type="submit" class="btn btn-primary">Kaydet</button>
         </div>
-        <input type="submit" value="Gönder" />
+        <div class="card-footer" style="float:right">
+            <button asp-controller="Panel" asp-action="Duyurular" class="btn btn-warning">Geri Dön</button>
+        </div>
     </form>
 </div>
+
 @section scripts{
     <script src="//ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 }
