--- a/Views/Panel/EditEtkinlik.cshtml
+++ b/Views/Panel/EditEtkinlik.cshtml
@@ -3,20 +3,42 @@
 @{
     Layout = "_PanelLayout";
 }
-<div>
+<div class="card card-primary">
+    <div class="card-header">
+        <h3 class="card-title">Duyuru Ekle-Düzenle</h3>
+    </div>
     <form asp-controller="Panel" asp-action="EditEtkinlik" method="post">
-        @*Güncellemede kullanmak için Id bilgisini gizli olarak tutuyoruz *@
         <input asp-for="Id" type="hidden" />
-        <div>
-            <label>Etkinlik Başlık: </label>
-            <input asp-for="EtkinlikBaslik" />
+        <div class="card-body">
+            <div class="form-group">
+                <label for="exampleInputEmail1">Etkinlik Başlığı</label>
+                <input asp-for="EtkinlikBaslik" class="form-control" id="exampleInputEmail1" placeholder="Başlık">
+            </div>
+            <div class="form-group">
+                <label for="exampleInputPassword1">Etkinlik Açıklaması</label>
+                <textarea asp-for="EtkinlikAciklama" class="form-control" rows="3" placeholder="Açıklama.." style="margin-top: 0px; margin-bottom: 0px; height: 75px;"></textarea>
+            </div>
+
+            <div class="form-group">
+                <label for="exampleInputFile">File input</label>
+                <div class="input-group">
+                    <div class="custom-file">
+                        <input type="file" class="custom-file-input" id="exampleInputFile">
+                        <label class="custom-file-label" for="exampleInputFile">Choose file</label>
+                    </div>
+                    <div class="input-group-append">
+                        <span class="input-group-text">Upload</span>
+                    </div>
+                </div>
+            </div>
+
         </div>
-        <div>
-            <label>Etkinlik Açıklama: </label>
-            <br />
-            <textarea asp-for="EtkinlikAciklama"></textarea>
+        <div class="card-footer" style="float:left">
+            <button type="submit" class="btn btn-primary">Kaydet</button>
         </div>
-        <input type="submit" value="Gönder" />
+        <div class="card-footer" style="float:right">
+            <button asp-controller="Panel" asp-action="Etkinlikler" class="btn btn-warning">Geri Dön</button>
+        </div>
     </form>
 </div>
 @section scripts{
