--- a/Views/Panel/Enstituler.cshtml
+++ b/Views/Panel/Enstituler.cshtml
@@ -3,24 +3,39 @@
     Layout = "_PanelLayout";
 }
 <div class="enstituler">
-    <a style="display:inline-block;"><h5>ENSTİTÜLER</h5></a>
-    <a asp-controller="Panel" asp-action="EditEnstituler" style="display:inline-block;float:right;"><h5>Enstitü Ekle</h5></a>
-    <ul>
-        @foreach (var enstitu in Model)
-        {
-            <li>
-                <a>
-                    @enstitu.EnsitutuAd
-                </a>
-                -
-                <a asp-controller="Panel" asp-action="EditEnstituler" asp-route-id="@enstitu.Id">
-                    (Düzenle)
-                </a>
-                -
-                <a asp-controller="Panel" asp-action="RemoveEnstitu" asp-route-id="@enstitu.Id">
-                    (Kaldır)
-                </a>
-            </li>
-        }
-    </ul>
+    <center><h5>ENSTİTÜLER</h5></center>
+    <br />
+    <a asp-controller="Panel" class="btn btn-outline-success" style="float:right" asp-action="EditEnstituler">Enstitü Ekle</a>
+    <br />
+    <br />
+
+    <table class="table table-striped">
+        <thead>
+            <tr>
+                <th scope="col">ID</th>
+                <th scope="col">Adı</th>
+                <th scope="col">Telefon</th>
+                <th scope="col">Mail</th>
+                <th scope="col">#</th>
+                <th scope="col">#</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var enstitu in Model)
+            {
+                <tr>
+                    <th scope="row">@enstitu.Id</th>
+                    <td>@enstitu.EnsitutuAd</td>
+                    <td>@enstitu.EnsitutuTel</td>
+                    <td>@enstitu.EnsitutuMail</td>
+                    <td>
+                        <a class="btn btn-outline-info" asp-controller="Panel" asp-action="EditEnstituler" asp-route-id="@enstitu.Id">Düzenle</a>
+                    </td>
+                    <td>
+                        <a class="btn btn-outline-danger" asp-controller="Panel" asp-action="RemoveEnstitu" asp-route-id="@enstitu.Id">Kaldır</a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
 </div>
