--- a/Views/Panel/Fakulteler.cshtml
+++ b/Views/Panel/Fakulteler.cshtml
@@ -3,24 +3,39 @@
     Layout = "_PanelLayout";
 }
 <div class="fakulteler">
-    <a style="display:inline-block;"><h5>FAKÜLTELER</h5></a>
-    <a asp-controller="Panel" asp-action="EditFakulteler" style="display:inline-block;float:right;"><h5>Fakülte Ekle</h5></a>
-    <ul>
-        @foreach (var fakulte in Model)
-        {
-            <li>
-                <a>
-                    @fakulte.FakulteAd
-                </a>
-                -
-                <a asp-controller="Panel" asp-action="EditFakulteler" asp-route-id="@fakulte.Id">
-                    (Düzenle)
-                </a>
-                -
-                <a asp-controller="Panel" asp-action="RemoveFakulte" asp-route-id="@fakulte.Id">
-                    (Kaldır)
-                </a>
-            </li>
-        }
-    </ul>
+    <center><h5>FAKÜLTELER</h5></center>
+    <br />
+    <a asp-controller="Panel" class="btn btn-outline-success" style="float:right" asp-action="EditFakulteler">Fakülte Ekle</a>
+    <br />
+    <br />
+
+    <table class="table table-striped">
+        <thead>
+            <tr>
+                <th scope="col">ID</th>
+                <th scope="col">Adı</th>
+                <th scope="col">Tel</th>
+                <th scope="col">Mail</th>
+                <th scope="col">#</th>
+                <th scope="col">#</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var fakulte in Model)
+            {
+                <tr>
+                    <th scope="row">@fakulte.Id</th>
+                    <td>@fakulte.FakulteAd</td>
+                    <td>@fakulte.FakulteTel</td>
+                    <td>@fakulte.FakulteMail</td>
+                    <td>
+                        <a class="btn btn-outline-info" asp-controller="Panel" asp-action="EditFakulteler" asp-route-id="@fakulte.Id">Düzenle</a>
+                    </td>
+                    <td>
+                        <a class="btn btn-outline-danger" asp-controller="Panel" asp-action="RemoveFakulte" asp-route-id="@fakulte.Id">Kaldır</a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
 </div>
