--- a/Views/Panel/MeslekYuksekOkullar.cshtml
+++ b/Views/Panel/MeslekYuksekOkullar.cshtml
@@ -3,24 +3,38 @@
     Layout = "_PanelLayout";
 }
 <div class="meslekyuksekokullar">
-    <a style="display:inline-block;"><h5>MESLEK YÜKSEK OKULLAR</h5></a>
-    <a asp-controller="Panel" asp-action="EditMeslekYuksekOkullar" style="display:inline-block;float:right;"><h5>Meslek Yüksekokul Ekle</h5></a>
-    <ul>
-        @foreach (var meslekYuksekOkul in Model)
-        {
-            <li>
-                <a>
-                    @meslekYuksekOkul.MeslekYuksekOkulAd
-                </a>
-                -
-                <a asp-controller="Panel" asp-action="EditMeslekYuksekOkullar" asp-route-id="@meslekYuksekOkul.Id">
-                    (Düzenle)
-                </a>
-                -
-                <a asp-controller="Panel" asp-action="RemoveMeslekYuksekOkul" asp-route-id="@meslekYuksekOkul.Id">
-                    (Kaldır)
-                </a>
-            </li>
-        }
-    </ul>
+    <center><h5>MESLEK YÜKSEK OKULLAR</h5></center>
+    <br />
+    <a asp-controller="Panel" class="btn btn-outline-success" style="float:right" asp-action="EditMeslekYuksekOkullar">Meslek Yüksekokul Ekle</a>
+    <br />
+    <br />
+    <table class="table table-striped">
+        <thead>
+            <tr>
+                <th scope="col">ID</th>
+                <th scope="col">Ad</th>
+                <th scope="col">Tel</th>
+                <th scope="col">Mail</th>
+                <th scope="col">#</th>
+                <th scope="col">#</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var meslekYuksekOkul in Model)
+            {
+                <tr>
+                    <th scope="row">@meslekYuksekOkul.Id</th>
+                    <th scope="row">@meslekYuksekOkul.MeslekYuksekOkulAd</th>
+                    <th scope="row">@meslekYuksekOkul.MeslekYuksekOkulTel</th>
+                    <th scope="row">@meslekYuksekOkul.MeslekYuksekOkulMail</th>
+                    <td>
+                        <a class="btn btn-outline-info" asp-controller="Panel" asp-action="EditMeslekYuksekOkullar" asp-route-id="@meslekYuksekOkul.Id">Düzenle</a>
+                    </td>
+                    <td>
+                        <a class="btn btn-outline-danger" asp-controller="Panel" asp-action="RemoveMeslekYuksekOkul" asp-route-id="@meslekYuksekOkul.Id">Kaldır</a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
 </div>
