--- a/Views/Panel/EditYuksekOkullar.cshtml
+++ b/Views/Panel/EditYuksekOkullar.cshtml
@@ -2,35 +2,57 @@
 @{
     Layout = "_PanelLayout";
 }
-<div>
-    <h4>Yüksekokul Ekle/Güncelle</h4>
+<div class="card card-primary">
+    <div class="card-header">
+        <h3 class="card-title">Yüksekokul Ekle-Düzenle</h3>
+    </div>
     <form asp-controller="Panel" asp-action="EditYuksekOkullar" method="post">
-        @*Güncellemede kullanmak için Id bilgisini gizli olarak tutuyoruz *@
         <input asp-for="Id" type="hidden" />
+        <div class="card-body">
+            <div class="form-group">
+                <label for="exampleInputEmail1">Yüksekokul Adı</label>
+                <input asp-for="YuksekOkulAd" class="form-control" id="exampleInputEmail1" placeholder="Ad">
+            </div>
+            <div class="form-group">
+                <label for="exampleInputEmail1">Meslek Yüksekokul Mail</label>
+                <input type="email" asp-for="YuksekOkulMail" class="form-control" id="exampleInputEmail1" placeholder="Mail">
+            </div>
+            <div class="form-group">
+                <label for="exampleInputEmail1">Yüksekokul Tel</label>
+                <input type="tel" asp-for="YuksekOkulTel" class="form-control" id="exampleInputEmail1" placeholder="Telefon">
+            </div>
+            <div class="form-group">
+                <label for="exampleInputPassword1">Yüksekokul Adresi</label>
+                <textarea asp-for="YuksekOkulAdres" class="form-control" rows="3" placeholder="Adres.." style="margin-top: 0px; margin-bottom: 0px; height: 75px;"></textarea>
+            </div>
+            <div class="form-group">
+                <label for="exampleInputPassword1">Yüksekokul Açıklaması</label>
+                <textarea asp-for="YuksekOkulAciklama" class="form-control" rows="3" placeholder="Açıklama.." style="margin-top: 0px; margin-bottom: 0px; height: 75px;"></textarea>
+            </div>
 
-        <div>
-            <label>Yüksekokul Adı: </label>
-            <input asp-for="YuksekOkulAd" />
+            <div class="form-group">
+                <label for="exampleInputFile">File input</label>
+                <div class="input-group">
+                    <div class="custom-file">
+                        <input type="file" class="custom-file-input" id="exampleInputFile">
+                        <label class="custom-file-label" for="exampleInputFile">Choose file</label>
+                    </div>
+                    <div class="input-group-append">
+                        <span class="input-group-text">Upload</span>
+                    </div>
+                </div>
+            </div>
+
         </div>
-        <br />
-        <div>
-            <label>Yüksekokul Adres: </label>
-            <input asp-for="YuksekOkulAdres" />
+        <div class="card-footer" style="float:left">
+            <button type="submit" class="btn btn-primary">Kaydet</button>
         </div>
-        <br />
-        <div>
-            <label>Yüksekokul Telefon: </label>
-            <input asp-for="YuksekOkulTel" />
+        <div class="card-footer" style="float:right">
+            <button asp-controller="Panel" asp-action="YuksekOkullar" class="btn btn-warning">Geri Dön</button>
         </div>
-        <br />
-        <div>
-            <label>Yüksekokul Mail: </label>
-            <input asp-for="YuksekOkulMail" />
-        </div>
-        <br />
-        <input type="submit" value="Gönder" />
     </form>
 </div>
+
 @section scripts{
     <script src="//ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 }
