--- a/Views/Panel/EditHaberler.cshtml
+++ b/Views/Panel/EditHaberler.cshtml
@@ -2,42 +2,57 @@
 @{
     Layout = "_PanelLayout";
 }
-
-<div>
+<div class="card card-primary">
+    <div class="card-header">
+        <h3 class="card-title">Duyuru Ekle-Düzenle</h3>
+    </div>
     <form asp-controller="Panel" asp-action="EditHaberler" method="post">
-        @*Güncellemede kullanmak için Id bilgisini gizli olarak tutuyoruz *@
         <input asp-for="Id" type="hidden" />
-        <div>
-            <label>Haber Başlığı: </label>
-            <input asp-for="HaberBaslik" />
-        </div>
+        <div class="card-body">
+            <div class="form-group">
+                <label for="exampleInputEmail1">Haber Başlığı</label>
+                <input asp-for="HaberBaslik" class="form-control" id="exampleInputEmail1" placeholder="Başlık">
+            </div>
+            <div class="form-group">
+                <label for="exampleInputPassword1">Haber Açıklaması</label>
+                <textarea asp-for="HaberAciklama" class="form-control" rows="3" placeholder="Açıklama.." style="margin-top: 0px; margin-bottom: 0px; height: 75px;"></textarea>
+            </div>
 
-        <div>
-            <label>Haber Açıklaması: </label>
-            <br />
-            <textarea asp-for="HaberAciklama"></textarea>
-        </div>
+            <div class="form-group">
+                <label>Haber Kategori</label>
+                <select class="form-control select2 select2-hidden-accessible" asp-for="HaberKategori" id="haberKategori" style="width: 100%;" data-select2-id="1" tabindex="-1" aria-hidden="true">
+                    <option value="Teknoloji">Teknoloji</option>
+                    <option value="Ekonomi">Ekonomi</option>
+                    <option value="Akademik">Akademik</option>
+                    <option value="Saglik">Sağlık</option>
+                    <option value="Diger">Diğer</option>
+                </select>
+            </div>
 
-        <div>
-            <label>Haber Kategori: </label>
-            <br />
-            <select asp-for="HaberKategori" id="haberKategori">
-                <option value="Teknoloji">Teknoloji</option>
-                <option value="Ekonomi">Ekonomi</option>
-                <option value="Akademik">Akademik</option>
-                <option value="Saglik">Sağlık</option>
-                <option value="Diger">Diğer</option>
-            </select>
-        </div>
 
-        <div>
-            <label>Haber Tarihi: </label>
-            <br />
-            @*<input id="haberTarihi" asp-for="HaberTarih" hidden/>*@
+            <div class="form-group">
+                <label for="exampleInputFile">File input</label>
+                <div class="input-group">
+                    <div class="custom-file">
+                        <input type="file" class="custom-file-input" id="exampleInputFile">
+                        <label class="custom-file-label" for="exampleInputFile">Choose file</label>
+                    </div>
+                    <div class="input-group-append">
+                        <span class="input-group-text">Upload</span>
+                    </div>
+                </div>
+            </div>
+
         </div>
-        <input type="submit" value="Gönder" />
+        <div class="card-footer" style="float:left">
+            <button type="submit" class="btn btn-primary">Kaydet</button>
+        </div>
+        <div class="card-footer" style="float:right">
+            <button asp-controller="Panel" asp-action="Haberler" class="btn btn-warning">Geri Dön</button>
+        </div>
     </form>
 </div>
 @section scripts{
     <script src="//ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 }
+
