--- a/Views/Panel/Haberler.cshtml
+++ b/Views/Panel/Haberler.cshtml
@@ -30,10 +30,10 @@
                     <td>@haber.HaberKategori</td>
                     <td>@haber.HaberTarih</td>
                     <td>
-                        <a class="btn btn-outline-info" asp-controller="Panel" asp-action="EditHaberler" asp-route-id="@haber.Id"> (Düzenle) </a>
+                        <a class="btn btn-outline-info" asp-controller="Panel" asp-action="EditHaberler" asp-route-id="@haber.Id">Düzenle</a>
                     </td>
                     <td>
-                        <a class="btn btn-outline-danger" asp-controller="Panel" asp-action="RemoveHaber" asp-route-id="@haber.Id" > (Kaldır) </a>
+                        <a class="btn btn-outline-danger" asp-controller="Panel" asp-action="RemoveHaber" asp-route-id="@haber.Id" >Kaldır</a>
                     </td>
                 </tr>
             }
